--- a/package.json
+++ b/package.json
@@ -19,14 +19,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^10.4.15",
-    "browser-sync": "^3.0.2",
+    "autoprefixer": "^10.4.20",
+    "browser-sync": "^2.29.3",
     "copyfiles": "^2.4.1",
-    "cssnano": "^5.1.15",
-    "eslint": "^8.47.0",
+    "cssnano": "^7.0.6",
+    "eslint": "^9.10.0",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
-    "postcss-cli": "^9.1.0",
-    "sass": "^1.66.1"
+    "postcss-cli": "^11.0.0",
+    "sass": "^1.78.0",
+    "send": "^0.19.0",
+    "serve-static": "^1.16.0"
+  },
+  "dependencies": {
+    "axios": "^1.7.7",
+    "chokidar": "^3.6.0",
+    "glob": "^11.0.0"
   }
 }
