--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "onchange": "^7.1.0",
     "postcss-cli": "^11.0.0",
     "sass": "^1.78.0",
-    "send": "^0.19.0",
-    "serve-static": "^1.16.0"
+    "send": ">=0.19.0",
+    "serve-static": ">=1.16.0"
   },
   "dependencies": {
-    "axios": "^1.7.7",
+    "axios": ">=0.28.0",
     "chokidar": "^3.6.0",
     "glob": "^11.0.0"
   }
